#pragma once
#include "IPropagator.h"

class VerletPropagator : public IPropagator {
public:
    void Propagate(SceneObject &object, std::function<glm::vec2(const SceneObject &)> accelerationFunc,
        float deltaTime) override;
};