@startuml
allowmixing
skinparam classFontName Courier
skinparam classFontSize 12
'skinparam linetype ortho

top to bottom direction

package Physics {

    class Constraint {
        +enum ConstraintDirection { UP, RIGHT, DOWN, LEFT, RADIAL }

        +Constraint()
        +Constraint(float distance, ConstraintDirection direction = UP)

        +ConstraintDirection direction
        +float distance

        +void ApplyConstraint(SceneObject* obj) const
    }

    Scene "1" *-- "0..5" Constraint : owns

    struct ContactPoint {
        +ColliderBase* collider;
        +ColliderBase* otherCollider;
        +vec2 point;
        +vec2 normal;
        +float penetrationDepth;
    }

    SceneObject "1" *-- "many" ContactPoint : has

    class PhysicsSolver {
        +PhysicsSolver()

        +void SetActivePropagator(const string &name)
        +IPropagator* GetActivePropagator() const

        +void SetTimeStep(float timeStep)
        +float GetTimeStep() const

        +void UpdatePhysics(Scene* scene, float deltaTime)
        +void StepPropagation(Scene* scene)
        +void DrawContactPoints()
        -vec2 GetAccelerationForObject(const SceneObject* object) const

        -Scene* currentScene_
        -unique_ptr<IPropagator> activePropagator_
        -float timeStep_
    }

    EngineLayer *-- PhysicsSolver : owns
    PhysicsSolver --> Constraint : applies
    PhysicsSolver --> ContactPoint : finds

    package Colliders {
        class ColliderBase {
            +explicit ColliderBase(SceneObject* parent)

            +virtual ColliderType GetType() const = 0
            +virtual bool CheckCollision(ColliderBase &other, ContactPoint &contact)

            +vec4 GetAABB() const
            +vec2 GetWorldPosition() const
            +vec2 GetWorldSize() const
            +mat4 GetTransformMatrix() const

            +float elasticity
            +float friction
            +vec2 localSize
            +vec2 localPosition
            +SceneObject* parentObject
        }

        SceneObject "1" *-- "many" ColliderBase : owns
        ColliderBase --> ContactPoint : uses

        enum ColliderType {
            Circle
        }

        ColliderBase -- ColliderType : has

        class CircleCollider {
            +explicit CircleCollider(SceneObject* parent): ColliderBase(parent)

            +ColliderType GetType() const override
            +bool CheckCollision(ColliderBase &other, ContactPoint &contact) override
        }

        ColliderBase <|-- CircleCollider : implements
        Scene *-- SceneObject
        EngineLayer -- Scene


        note right of ColliderBase
            Strategy Pattern
        end note
    }

    package Propagators {
        class IPropagator {
            +virtual void Propagate(SceneObject& object, std::function<vec2(const SceneObject&)> accelerationFunc, float deltaTime)
        }

        class EulerPropagator
        class RK4Propagator
        class SemiImplicitEulerPropagator
        class VelocityVerletPropagator
        class VerletPropagator

        IPropagator <|-- EulerPropagator : implements
        IPropagator <|-- RK4Propagator : implements
        IPropagator <|-- SemiImplicitEulerPropagator : implements
        IPropagator <|-- VelocityVerletPropagator : implements
        IPropagator <|-- VerletPropagator : implements

        PhysicsSolver --> IPropagator : uses

        Constraint -[hidden]- Propagators


        note left of IPropagator
            Strategy Pattern
        end note
    }

}
EngineLayer -[hidden]-> Physics

@enduml